# marimo-book

./: .gitignore  CHANGELOG.md  CLAUDE.md  PUBLISHING.md  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release-drafter.yml
docs/: CNAME  book.yml
docs/blog/posts/: 2026-06-04-hello-blog.md
docs/content/: anywidget_demo.py  api-reference-guide.md  authoring.md  blog-guide.md  book_yml.md  building.md  cached-mode-guide.md  dependencies.md  deploying.md  example.py  index.md  inspiration.md  link_checks.md  precompute_demo.py  quickstart.md  roadmap.md  wasm_demo.py  widgets.md  widgets.py
docs/superpowers/plans/: 2026-06-04-api-docs.md
docs/superpowers/specs/: 2026-06-04-api-docs-design.md
notes/: 2026-06-04-blog-module-design.md  2026-06-04-blog-module-plan.md  marimo-island-generator-feedback.md
src/marimo_book/: __init__.py  api_docs.py  blog.py  cli.py  config.py  launch_buttons.py  preprocessor.py  rendered_store.py  shell.py  watcher.py
src/marimo_book/assets/: extra.css  logo_sidebar.css  marimo_book.js  mathjax.js
src/marimo_book/assets/scaffold/: .gitignore  README.md  book.yml
src/marimo_book/assets/scaffold/.github/workflows/: deploy.yml
src/marimo_book/assets/scaffold/content/: example.py  intro.md
src/marimo_book/transforms/: __init__.py  anywidgets.py  callouts.py  link_rewrites.py  marimo_export.py  md_roles.py  pep723.py  precompute.py  wasm.py
tests/: test_api_docs.py  test_blog.py  test_cached_render.py  test_cli_commands.py  test_config.py  test_dependencies.py  test_footer.py  test_link_rewrites.py  test_pep723.py  test_precompute.py  test_preprocessor.py  test_transforms.py  test_wasm.py  test_watcher.py
tests/fixtures/: simple_notebook.py
tests/fixtures/alias_cycle_pkg/: __init__.py  leaf.py
tests/fixtures/sample_pkg/: __init__.py  _private.py  core.py
tests/fixtures/sample_pkg/sub/: __init__.py  widgets.py
tests/phase0_spike/: README.md  RESULTS.md  SYNTAX_INVENTORY.md  mkdocs.yml
tests/phase0_spike/docs/: index.md  plotly.md  prose.md  widget.md
tests/phase0_spike/docs/many/: page01.md  page02.md  page03.md  page04.md  page05.md  page06.md  page07.md  page08.md  page09.md  page10.md
tests/phase0_spike/docs/stylesheets/: extra.css
