[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "marimo-book"
dynamic = ["version"]
description = "Build clean, searchable static books from marimo notebooks and markdown"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Luke Chang", email = "luke.j.chang@dartmouth.edu" },
]
keywords = ["marimo", "notebook", "static-site", "documentation", "book", "mkdocs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pybtex>=0.24",
    "marimo>=0.23,<0.24",
    # marimo declares nbformat as an optional extra; we always use
    # `marimo export ipynb` under the hood, so pin it as a hard dep.
    "nbformat>=5.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.7",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
# Opt-in external link checking during `marimo-book build`. Enable via
# `check_external_links: true` in book.yml and install this extra.
linkcheck = [
    "mkdocs-htmlproofer-plugin>=1.3",
]
# Opt-in social-card / OpenGraph-image generation. Enable via
# `social_cards: true` in book.yml and install this extra.
# Pulls Pillow + cairosvg (~20 MB) for rasterising the template SVG.
social = [
    "mkdocs-material[imaging]>=9.5",
]
# Opt-in cross-reference resolution by heading text — the MkDocs analog
# of MyST `{ref}`. Enable via `cross_references: true` in book.yml and
# install this extra. Lets you write `[Heading text][]` and have it
# resolve to whatever page contains that heading.
autorefs = [
    "mkdocs-autorefs>=1.0",
]

[project.urls]
Homepage = "https://ljchang.github.io/marimo-book/"
Documentation = "https://ljchang.github.io/marimo-book/"
Repository = "https://github.com/ljchang/marimo-book"
Issues = "https://github.com/ljchang/marimo-book/issues"
Changelog = "https://github.com/ljchang/marimo-book/blob/main/CHANGELOG.md"

[project.scripts]
marimo-book = "marimo_book.cli:app"

[tool.hatch.version]
# Version is derived from the latest git tag matching `v*`. Tagging
# `v0.1.0a3` produces a wheel with version `0.1.0a3`. Untagged commits
# get a dev version like `0.1.0a3.dev2+g<sha>`. See PUBLISHING.md.
source = "vcs"
raw-options = { version_scheme = "no-guess-dev", local_scheme = "node-and-date" }

[tool.hatch.build.hooks.vcs]
# Materialise the resolved version into the package at build time so
# `marimo_book.__version__` works in installed wheels (importlib.metadata
# is the runtime fallback for editable installs).
version-file = "src/marimo_book/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/marimo_book"]

# Non-Python files under the package (stylesheets, JS shim, scaffold
# templates with dot-prefixed entries like .github/ and .gitignore) are
# included by hatch's default package inclusion. No force-include needed.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Scaffold templates (seed files for `marimo-book new`) and marimo fixtures
# intentionally contain patterns that aren't valid in normal Python code —
# bare expressions as cell outputs, for example. Skip them so ruff doesn't
# second-guess them.
extend-exclude = [
    "src/marimo_book/assets/scaffold/**/*.py",
    "tests/fixtures/**/*.py",
    "src/marimo_book/_version.py",  # generated by hatch-vcs at build time
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = [
    "E501",  # long lines — ruff format handles most
    # Typer requires `typer.Option(...)` / `typer.Argument(...)` in argument
    # defaults. This is documented and idiomatic; B008's concern about
    # "functions called in defaults" doesn't apply to typer sentinels.
    "B008",
]
